--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
-    "name": "honl/magento2-companyswitcher",
-    "description": "",
+    "name": "reach-digital/magento2-companyswitcher",
+    "description": "Moves the Company and Vat field to the top of the checkout and add a switcher (private/business).",
+    "homepage": "https://github.com/ho-nl/magento2-ReachDigital_CompanySwitcher",
     "require": {
-        "php": "~7.0.0"
+        "php": "7.0.2|7.0.4|~7.0.6|~7.1.0"
     },
     "type": "magento2-module",
-    "version": "0.1.0",
+    "license": "BSD-2-Clause",
     "autoload": {
         "files": [
             "registration.php"
