--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Moves the Company and Vat field to the top of the checkout and add a switcher (private/business).",
     "homepage": "https://github.com/ho-nl/magento2-ReachDigital_CompanySwitcher",
     "require": {
-        "php": "7.0.2|7.0.4|~7.0.6|~7.1.0"
+        "php": "7.0.2|7.0.4|~7.0.6|~7.1.0|~7.2.0"
     },
     "type": "magento2-module",
     "license": "BSD-2-Clause",
