--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "Moves the Company and Vat field to the top of the checkout and add a switcher (private/business).",
     "homepage": "https://github.com/ho-nl/magento2-ReachDigital_CompanySwitcher",
     "require": {
-        "php": "~7.0.13||~7.1.0||~7.2.0||~7.3.0||~7.4.0",
-        "magento/product-community-edition": "^2.2.9||^2.3.0"
+        "php": "~7.2.0||~7.3.0||~7.4.0",
+        "magento/framework": "~102.0.0"
     },
     "type": "magento2-module",
     "license": "BSD-2-Clause",
