--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "description": "Moves the Company and Vat field to the top of the checkout and add a switcher (private/business).",
     "homepage": "https://github.com/ho-nl/magento2-ReachDigital_CompanySwitcher",
     "require": {
-        "php": "^7.2|^7.3|^7.4|^8.0|^8.1",
-        "magento/framework": "^102.0.0 || ^103.0.0"
+        "php": "^7.2|^7.3|^7.4|^8.0|^8.1"
     },
     "type": "magento2-module",
     "license": "BSD-2-Clause",
